# heat2D

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  plot_heat.py
include/: Grid.hpp  HeatSolver.hpp  Timer.hpp
scripts/: benchmark.py
src/: Grid.cpp  HeatSolver.cpp  main.cpp
